force-app/main/default/objects/WT_Participant__c/fields/Primary_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Zip_Code__c</fullName>
    <description>Zip code of the primary address.</description>
    <inlineHelpText>Zip code of the primary address.</inlineHelpText>
    <label>Primary Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>