force-app/main/default/objects/WT_Participant__c/fields/Safety_Toe__c.field-meta.xml
<CustomField>
    <fullName>Safety_Toe__c</fullName>
    <description>Information about the tester&apos;s safety toe requirements.</description>
    <inlineHelpText>Information about the tester&apos;s safety toe requirements.</inlineHelpText>
    <label>Safety Toe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, is required</fullName>
            </value>
            <value>
                <fullName>Not required but will wear</fullName>
            </value>
            <value>
                <fullName>Not required, will not wear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>