force-app/main/default/objects/WT_Participant__c/fields/Send_Thank_You_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Thank_You_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to send a Thank You Email</description>
    <inlineHelpText>Check this box to send a Thank You Email</inlineHelpText>
    <label>Send Thank You Email</label>
    <type>Checkbox</type>
</CustomField>