force-app/main/default/objects/WT_Participant__c/fields/Shoe_Size__c.field-meta.xml
<CustomField>
    <fullName>Shoe_Size__c</fullName>
    <description>Shoe size of the tester. Allows for half sizes.</description>
    <inlineHelpText>Shoe size of tester. Allows for half sizes.</inlineHelpText>
    <label>Shoe Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>6 1/2</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>7 1/2</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>8 1/2</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>9 1/2</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>10 1/2</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>11 1/2</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>12 1/2</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>13 1/2</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>14 1/2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>