force-app/main/default/objects/WT_Participant__c/fields/Shoe_Size_Gender__c.field-meta.xml
<CustomField>
    <fullName>Shoe_Size_Gender__c</fullName>
    <description>For shoe size, specify if a men&apos;s or women&apos;s size.</description>
    <inlineHelpText>For shoe size, specify if a men&apos;s or women&apos;s size.</inlineHelpText>
    <label>Shoe Size Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Men&apos;s</fullName>
            </value>
            <value>
                <fullName>Women&apos;s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>