force-app/main/default/objects/WT_Participant__c/fields/Shoe_Width__c.field-meta.xml
<CustomField>
    <fullName>Shoe_Width__c</fullName>
    <description>Picklist field to capture show width information.</description>
    <inlineHelpText>Picklist field to capture show width information.</inlineHelpText>
    <label>Shoe Width</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Narrow</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Wide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>