force-app/main/default/objects/WT_Participant__c/fields/Sleeve_Length__c.field-meta.xml
<CustomField>
    <fullName>Sleeve_Length__c</fullName>
    <description>The length of the tester&apos;s sleeve.</description>
    <inlineHelpText>The length of the tester&apos;s sleeve.</inlineHelpText>
    <label>Sleeve Length</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>