force-app/main/default/objects/WT_Participant__c/fields/Waist_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Waist_Measurement__c</fullName>
    <description>The measurement of the tester&apos;s waist.</description>
    <inlineHelpText>The measurement of the tester&apos;s waist.</inlineHelpText>
    <label>Waist Measurement</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>