force-app/main/default/objects/WT_Participant__c/fields/Waterproof_Footwear__c.field-meta.xml
<CustomField>
    <fullName>Waterproof_Footwear__c</fullName>
    <description>Information about the tester&apos;s waterproof requirements.</description>
    <inlineHelpText>Information about the tester&apos;s waterproof requirements.</inlineHelpText>
    <label>Waterproof Footwear</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, all the time</fullName>
            </value>
            <value>
                <fullName>Occasionally</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>