force-app/main/default/objects/WT_Participant__c/fields/Wedge_Sole__c.field-meta.xml
<CustomField>
    <fullName>Wedge_Sole__c</fullName>
    <description>Requirements about the tester&apos;s wedge sole.</description>
    <inlineHelpText>Requirements about the tester&apos;s wedge sole.</inlineHelpText>
    <label>Wedge Sole</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, all the time</fullName>
            </value>
            <value>
                <fullName>Occasionally</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>