force-app/main/default/objects/WT_Participant__c/fields/Wet_Environment__c.field-meta.xml
<CustomField>
    <fullName>Wet_Environment__c</fullName>
    <description>Information about if the tester is in a wet environment.</description>
    <inlineHelpText>Information about if the tester is in a wet environment.</inlineHelpText>
    <label>Wet Environment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>