force-app/main/default/objects/WT_Participant__c/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <description>Work phone of the tester.</description>
    <inlineHelpText>Work phone of the tester.</inlineHelpText>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>