force-app/main/default/objects/WT_Participant__c/fields/Year_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Year_of_birth__c</fullName>
    <description>Formula field that returns the year of birth.</description>
    <formula>TEXT(YEAR(Date_of_Birth__c))</formula>
    <inlineHelpText>The birth year of the tester.</inlineHelpText>
    <label>Year of birth</label>
    <type>Text</type>
</CustomField>