force-app/main/default/objects/WT_Participant__c/recordTypes/Vasque_Participant.recordType-meta.xml
<RecordType>
    <fullName>Vasque_Participant</fullName>
    <active>true</active>
    <description>Record type for Vasque participants</description>
    <label>Vasque Participant</label>
</RecordType>