force-app/main/default/objects/WT_Participant__c/recordTypes/Wear_Garment_Participant.recordType-meta.xml
<RecordType>
    <fullName>Wear_Garment_Participant</fullName>
    <active>true</active>
    <description>Wear and Garment Participants</description>
    <label>Wear/Garment Participant</label>
</RecordType>