force-app/main/default/objects/WT_Participant__c/listViews/Ambassadors.listView-meta.xml
<ListView>
    <fullName>Ambassadors</fullName>
    <columns>NAME</columns>
    <columns>Shoe_Size__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Participant_Class__c</field>
        <operation>equals</operation>
        <value>Ambassador</value>
    </filters>
    <label>Ambassadors</label>
</ListView>