force-app/main/default/objects/WT_Participant__c/listViews/Currently_Testing.listView-meta.xml
<ListView>
    <fullName>Currently_Testing</fullName>
    <columns>NAME</columns>
    <columns>Shoe_Size__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Participant_Status__c</field>
        <operation>equals</operation>
        <value>Currently Testing</value>
    </filters>
    <label>Currently Testing</label>
</ListView>