force-app/main/default/objects/WT_Participant__c/listViews/Internal_Employees.listView-meta.xml
<ListView>
    <fullName>Internal_Employees</fullName>
    <columns>NAME</columns>
    <columns>Shoe_Size__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Participant_Class__c</field>
        <operation>equals</operation>
        <value>Internal Employees</value>
    </filters>
    <label>Internal Employees</label>
</ListView>