force-app/main/default/objects/WT_Participant__c/listViews/Mount_Washington_Observatory.listView-meta.xml
<ListView>
    <fullName>Mount_Washington_Observatory</fullName>
    <columns>NAME</columns>
    <columns>Shoe_Size__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Participant_Class__c</field>
        <operation>equals</operation>
        <value>Mount Washington Observatory</value>
    </filters>
    <label>Mount Washington Observatory</label>
</ListView>