force-app/main/default/objects/WT_Participant__c/listViews/Sales_Reps.listView-meta.xml
<ListView>
    <fullName>Sales_Reps</fullName>
    <columns>NAME</columns>
    <columns>Shoe_Size__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Participant_Class__c</field>
        <operation>equals</operation>
        <value>Sales Reps</value>
    </filters>
    <label>Sales Reps</label>
</ListView>